package blackhole;

option java_package = "com.dp.blackhole.common.gen";
option java_outer_classname = "ConfResPB";

message ConfRes{
    message AppConfRes {
        required string app_name = 1;
        required string watch_file = 2;
        required string period = 3;
    }
    repeated AppConfRes appConfRes = 1;
}